# blog-django

./: .flake8  .gitignore  .pyup.yml  Procfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: django.yml
blogdjango/: settings.py  urls.py
blogdjango/blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blogdjango/blog/migrations/: 0001_initial.py  0002_aboutblog.py  0003_rename_about_blog_aboutblog_content.py
blogdjango/blog/tests/: test_login.py  test_post.py
contrib/: env-sample
templates/: about_blog.html  add_post.html  base.html  index.html  sidebar.html  update_post.html
templates/registration/: login.html
