[tool.poetry]
name = "blog-django"
version = "0.1.0"
description = "A sample blog with CRUD."
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^4.0.3"
gunicorn = "^20.1.0"
pylint = "^2.12.2"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
