[tool.poetry]
name = "blog-django"
version = "0.1.0"
description = "A sample blog with CRUD."
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^4.0.3"
gunicorn = "^20.1.0"
pylint = "^2.12.2"
python-decouple = "^3.6"
django-s3-folder-storage = "^0.5"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
Collectfast = "^2.2.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
